--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,7 +26,7 @@ dependencies:
   google_sign_in: ^4.0.1+1 
   firebase_auth: ^0.16.1
   graphql_flutter: ^3.0.0
-  loadmore: ^1.0.4
+  url_launcher: ^5.5.0
 
 
   # The following adds the Cupertino Icons font to your application.
